--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>universal-converter</artifactId>
 	<version>1.0.0</version>
 	<name>universal-converter</name>
-	<description>my skills</description>
+	<description>internship assignment</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -22,11 +22,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.4.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<version>2.4.4</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
@@ -34,6 +36,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.4.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -43,7 +46,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.4.3</version>
+				<version>2.4.4</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
