--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+universal-converter.iml
+.idea
+.gitignore
 
 ### STS ###
 .apt_generated
