--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 HELP.md
-testFile.txt
-.gitignore
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
