--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-HELP.md
+## maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.idea/
-*.iws
-*.iml
-*.ipr
 
 ### STS ###
 .apt_generated
@@ -16,6 +12,12 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 ### NetBeans ###
 /nbproject/private/
